fixed error not showing todo checked when loaded; can save from todo comp; some code refactored

--- a/src/style.css
+++ b/src/style.css
@@ -18,13 +18,17 @@ ul, li {
 }
 
 input[type=text] {
-  border: 1px solid #101010;
+  border: 1px solid #505050;
   padding: 10px 14px;
   border-radius: 3px;
   font-weight: lighter;
   min-width: 310px;
   outline-color: #2196F3;
   margin-bottom: 15px;
+}
+
+input[type=text]:focus {
+  border-color: #2196F3;
 }
 
 ::placeholder {
